@@ -1,4 +1,5 @@
 0.09
+ - Update Module::Install to 1.19 version.
  - Update copyright years.
 
 0.08 2015-10-14T11:21:19+02:00
